--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-6">
                         <div class="card h-100 shadow-sm hover-zoom border-green">
                             <div class="card-accent bg-green"></div>
-                            <img src="https://via.placeholder.com/600x400" class="card-img-top"
+                            <img src="img/control-solar.jpg" class="card-img-top"
                                 alt="Láminas Control Solar">
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas Control Solar</h3>
@@ -88,7 +88,7 @@
                     <div class="col-md-6">
                         <div class="card h-100 shadow-sm hover-zoom border-blue">
                             <div class="card-accent bg-blue"></div>
-                            <img src="https://via.placeholder.com/600x400" class="card-img-top"
+                            <img src="img/laminas-de-seguridad.jpg" class="card-img-top"
                                 alt="Láminas de Seguridad">
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas de Seguridad</h3>
@@ -105,9 +105,9 @@
             <div class="container">
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow-sm border-green hover-lift">
-                            <div class="card-accent bg-green"></div>
-                            <img src="https://via.placeholder.com/1280x720" class="card-img-top" alt="Energía">
+                        <div class="card h-100 shadow-sm border-blue hover-lift">
+                            <div class="card-accent bg-blue"></div>
+                            <img src="img/eficiencia-energetica.jpg" class="card-img-top" alt="Energía">
                             <div class="card-body">
                                 <h3 class="card-title text-primary mb-3"><i class="fas fa-bolt me-2"></i>ENERGIA</h3>
                                 <h6 class="card-subtitle mb-3 text-muted fw-light">Eficiencia energética</h6>
@@ -168,9 +168,9 @@
                     </div>
                     <!-- Repeat for other cards -->
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow-sm border-blue hover-lift">
-                            <div class="card-accent bg-blue"></div>
-                            <img src="https://via.placeholder.com/1280x720" class="card-img-top" alt="Seguridad">
+                        <div class="card h-100 shadow-sm border-green hover-lift">
+                            <div class="card-accent bg-green"></div>
+                            <img src="img/scotchshield.jpg" class="card-img-top" alt="Seguridad">
                             <div class="card-body">
                                 <h3 class="card-title text-primary mb-3"><i class="fas fa-shield-alt me-2"></i>SEGURIDAD
                                 </h3>
@@ -222,9 +222,9 @@
 
 
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow-sm border-blue hover-lift">
-                            <div class="card-accent bg-blue"></div>
-                            <img src="https://via.placeholder.com/1280x720" class="card-img-top" alt="Confort y Estilo">
+                        <div class="card h-100 shadow-sm border-info hover-lift">
+                            <div class="card-accent bg-info"></div>
+                            <img src="img/confort-estilo.jpg" class="card-img-top" alt="Confort y Estilo">
                             <div class="card-body">
                                 <h3 class="card-title text-primary mb-3"><i class="fas fa-couch me-2"></i>CONFORT</h3>
                                 <h6 class="card-subtitle mb-3 text-muted fw-light">Confort</h6>
@@ -270,9 +270,9 @@
                     </div>
 
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow-sm border-red hover-lift">
-                            <div class="card-accent bg-red"></div>
-                            <img src="https://via.placeholder.com/1280x720" class="card-img-top" alt="Estilo">
+                        <div class="card h-100 shadow-sm border-yellow hover-lift">
+                            <div class="card-accent bg-yellow"></div>
+                            <img src="img/estilo.jpg" class="card-img-top" alt="Estilo">
                             <div class="card-body">
                                 <h3 class="card-title text-primary mb-3"><i class="fas fa-palette me-2"></i>ESTILO</h3>
                                 <h6 class="card-subtitle mb-3 text-muted fw-light">Diseño y elegancia</h6>
@@ -324,7 +324,7 @@
 
         <section class="brand-logos py-5 bg-light">
             <div class="container">
-                <h2 class="text-center mb-4">Marcas de confianza</h2>
+                <h2 class="text-center mb-4">Sellos de confianza</h2>
                 <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4 justify-content-center align-items-center">
                     <div class="col text-center">
                         <img src="img/IWFA.png" alt="Logo 1" class="img-fluid grayscale">
@@ -335,9 +335,9 @@
                     <div class="col text-center">
                         <img src="img/skincancer.jpg" alt="Logo 3" class="img-fluid grayscale">
                     </div>
-                    <div class="col text-center">
+                    <!-- <div class="col text-center">
                         <img src="img/yartech.png" alt="Logo 4" class="img-fluid grayscale">
-                    </div>
+                    </div> -->
                     <!-- <div class="col text-center">
                         <img src="img/IWFA.png" alt="Logo 5" class="img-fluid grayscale">
                     </div>
@@ -380,7 +380,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
-                    <img src="https://via.placeholder.com/600x400" alt="Láminas 3M en acción"
+                    <img src="img/banner-footer.jpg" alt="Láminas 3M en acción"
                         class="img-fluid rounded shadow">
                 </div>
             </div>
@@ -409,7 +409,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-        <script>
+        <!-- <script>
             // Deshabilitar clic derecho
             document.addEventListener('contextmenu', function(e) {
               e.preventDefault();
@@ -428,7 +428,7 @@
                 return false;
               }
             });
-          </script>
+          </script> -->
           
 </body>
 
