--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                             <a href="#" class="btn btn-primary btn-lg">Contáctanos</a>
                         </div>
                         <div class="mt-5 d-flex justify-content-center align-items-center flex-column flex-md-row">
-                            <img src="img/logo-yartech-lg.png" alt="YARTECH Logo" class="me-3 mb-3 mb-md-0" style="height: 50px;">
+                            <img src="img/logo-yartech-lg.png" alt="YARTECH Logo" class="me-3 mb-3 mb-md-0"
+                                style="height: 50px;">
                             <span class="fs-4 fw-bold"></span>
                             <span class="mx-3">|</span>
                             <span class="fs-5">Distribuidor oficial de</span>
@@ -66,7 +67,7 @@
                 </div>
             </div>
         </section>
-        
+
 
 
         <section class="our-products py-5 bg-light">
@@ -76,8 +77,7 @@
                     <div class="col-md-6">
                         <div class="card h-100 shadow-sm hover-zoom border-green">
                             <div class="card-accent bg-green"></div>
-                            <img src="img/control-solar.jpg" class="card-img-top"
-                                alt="Láminas Control Solar">
+                            <img src="img/control-solar.jpg" class="card-img-top" alt="Láminas Control Solar">
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas Control Solar</h3>
                                 <p class="card-text">Reduce el calor y protege contra los rayos UV</p>
@@ -88,12 +88,11 @@
                     <div class="col-md-6">
                         <div class="card h-100 shadow-sm hover-zoom border-blue">
                             <div class="card-accent bg-blue"></div>
-                            <img src="img/laminas-de-seguridad.jpg" class="card-img-top"
-                                alt="Láminas de Seguridad">
+                            <img src="img/laminas-de-seguridad.jpg" class="card-img-top" alt="Láminas de Seguridad">
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas de Seguridad</h3>
                                 <p class="card-text">Protección contra roturas y entrada forzada</p>
-                                <a href="#" class="btn btn-primary">Ver más</a>
+                                <a href="#" class="btn btn-success">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -380,8 +379,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
-                    <img src="img/banner-footer.jpg" alt="Láminas 3M en acción"
-                        class="img-fluid rounded shadow">
+                    <img src="img/banner-footer.jpg" alt="Láminas 3M en acción" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -409,7 +407,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-        <!-- <script>
+    <!-- <script>
             // Deshabilitar clic derecho
             document.addEventListener('contextmenu', function(e) {
               e.preventDefault();
@@ -429,7 +427,7 @@
               }
             });
           </script> -->
-          
+
 </body>
 
 </html>
