--- a/index.html
+++ b/index.html
@@ -407,26 +407,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <!-- <script>
-            // Deshabilitar clic derecho
-            document.addEventListener('contextmenu', function(e) {
-              e.preventDefault();
-            });
-          
-            // Deshabilitar inspección de elementos
-            document.addEventListener('keydown', function(event) {
-              if (event.keyCode === 123) { // Bloquear F12
-                event.preventDefault();
-                return false;
-              } else if (event.ctrlKey && event.shiftKey && event.keyCode === 73) { // Bloquear Ctrl+Shift+I
-                event.preventDefault();
-                return false;
-              } else if (event.ctrlKey && event.keyCode === 85) { // Bloquear Ctrl+U
-                event.preventDefault();
-                return false;
-              }
-            });
-          </script> -->
+        <script src="js/clickderecho.js"></script>
 
 </body>
 
