modificaciones textos + img

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <h1 class="display-4">Protege tu hogar del frío y del calor</h1>
-                        <p class="lead">con láminas 3M. Expertos en aislación térmica y control solar</p>
+                        <p class="lead">Expertos en aislación térmica y control solar</p>
                         <div class="mt-4 d-flex flex-wrap justify-content-center">
                             <span class="badge bg-primary me-2 mb-2">ENERGIA</span>
                             <span class="badge bg-success me-2 mb-2">SEGURIDAD</span>
@@ -60,7 +60,7 @@
                                 style="height: 50px;">
                             <span class="fs-4 fw-bold"></span>
                             <span class="mx-3">|</span>
-                            <span class="fs-5">Distribuidor oficial de</span>
+                            <span class="fs-5">Distribuidor oficial</span>
                             <img src="img/3m.svg" alt="3M Logo" class="ms-3" style="height: 40px;">
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas Control Solar</h3>
                                 <p class="card-text">Reduce el calor y protege contra los rayos UV</p>
-                                <a href="#" class="btn btn-primary">Ver más</a>
+                                <a href="#" class="btn btn-primary">Más información</a>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas de Seguridad</h3>
                                 <p class="card-text">Protección contra roturas y entrada forzada</p>
-                                <a href="#" class="btn btn-success">Ver más</a>
+                                <a href="#" class="btn btn-success">Más información</a>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                                 class="accordion-button collapsed p-0 bg-transparent text-primary d-flex justify-content-center align-items-center"
                                                 type="button" data-bs-toggle="collapse" data-bs-target="#collapseEnergy"
                                                 aria-expanded="false" aria-controls="collapseEnergy">
-                                                Ver más
+                                                Más información
                                             </button>
 
                                         </h2>
@@ -125,10 +125,7 @@
                                             aria-labelledby="headingEnergy" data-bs-parent="#accordionEnergy">
                                             <div class="accordion-body px-0 pt-3">
                                                 <p class="card-text mb-4 text-muted">Las ventanas suelen ser la parte
-                                                    más ineficiente de una casa o edificio. Las películas para ventanas
-                                                    de 3M pueden reducir esas ineficiencias para crear un entorno más
-                                                    cómodo y económico. La película Thinsulate Climate Control 75 de 3M
-                                                    es como agregar un panel de vidrio adicional a su ventana.</p>
+                                                    más ineficiente de una casa o edificio.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -171,7 +168,7 @@
                             <div class="card-accent bg-green"></div>
                             <img src="img/scotchshield.jpg" class="card-img-top" alt="Seguridad">
                             <div class="card-body">
-                                <h3 class="card-title text-primary mb-3"><i class="fas fa-shield-alt me-2"></i>SEGURIDAD
+                                <h3 class="card-title text-success mb-3"><i class="fas fa-shield-alt me-2"></i>SEGURIDAD
                                 </h3>
                                 <h6 class="card-subtitle mb-3 text-muted fw-light">Protección de ventanas</h6>
                                 <div class="accordion" id="accordionSecuritys">
@@ -182,14 +179,14 @@
                                                 type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#collapseSecurity" aria-expanded="false"
                                                 aria-controls="collapseSecurity">
-                                                Ver más
+                                                Más información
                                             </button>
                                         </h2>
                                         <div id="collapseSecurity" class="accordion-collapse collapse"
                                             aria-labelledby="headingSecurity" data-bs-parent="#accordionSecurity">
                                             <div class="accordion-body px-0 pt-3">
                                                 <p class="card-text mb-4 text-muted">Las ventanas suelen ser la parte
-                                                    más vulnerable de su casa o edificio. Las películas para ventanas 3M
+                                                    más vulnerable de su casa o edificio. Las láminas para ventanas 3M
                                                     Scotchshield Safety & Security pueden abordar las vulnerabilidades
                                                     de una ventana ayudando a mantener los vidrios rotos en su lugar. Le
                                                     ayudan a proteger a las personas, la propiedad y la continuidad de
@@ -225,7 +222,7 @@
                             <div class="card-accent bg-info"></div>
                             <img src="img/confort-estilo.jpg" class="card-img-top" alt="Confort y Estilo">
                             <div class="card-body">
-                                <h3 class="card-title text-primary mb-3"><i class="fas fa-couch me-2"></i>CONFORT</h3>
+                                <h3 class="card-title text-info mb-3"><i class="fas fa-couch me-2"></i>CONFORT</h3>
                                 <h6 class="card-subtitle mb-3 text-muted fw-light">Confort</h6>
                                 <div class="accordion" id="accordionComfort">
                                     <div class="accordion-item border-0">
@@ -235,13 +232,13 @@
                                                 type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#collapseComfort" aria-expanded="false"
                                                 aria-controls="collapseComfort">
-                                                Ver más
+                                                Más información
                                             </button>
                                         </h2>
                                         <div id="collapseComfort" class="accordion-collapse collapse"
                                             aria-labelledby="headingComfort" data-bs-parent="#accordionComfort">
                                             <div class="accordion-body px-0 pt-3">
-                                                <p class="card-text mb-4 text-muted">Las películas para ventanas 3M
+                                                <p class="card-text mb-4 text-muted">Las láminas para ventanas 3M
                                                     mejoran el confort y el estilo de su hogar o edificio,
                                                     proporcionando un ambiente más agradable y una apariencia moderna.
                                                 </p>
@@ -271,9 +268,9 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 shadow-sm border-yellow hover-lift">
                             <div class="card-accent bg-yellow"></div>
-                            <img src="img/estilo.jpg" class="card-img-top" alt="Estilo">
+                            <img src="img/estilo-.jpg" class="card-img-top" alt="Estilo">
                             <div class="card-body">
-                                <h3 class="card-title text-primary mb-3"><i class="fas fa-palette me-2"></i>ESTILO</h3>
+                                <h3 class="card-title text-warning mb-3"><i class="fas fa-palette me-2"></i>ESTILO</h3>
                                 <h6 class="card-subtitle mb-3 text-muted fw-light">Diseño y elegancia</h6>
                                 <div class="accordion" id="accordionStyle">
                                     <div class="accordion-item border-0">
@@ -282,13 +279,13 @@
                                                 class="accordion-button collapsed p-0 bg-transparent text-primary d-flex justify-content-center align-items-center"
                                                 type="button" data-bs-toggle="collapse" data-bs-target="#collapseStyle"
                                                 aria-expanded="false" aria-controls="collapseStyle">
-                                                Ver más
+                                                Más información
                                             </button>
                                         </h2>
                                         <div id="collapseStyle" class="accordion-collapse collapse"
                                             aria-labelledby="headingStyle" data-bs-parent="#accordionStyle">
                                             <div class="accordion-body px-0 pt-3">
-                                                <p class="card-text mb-4 text-muted">Las películas decorativas 3M
+                                                <p class="card-text mb-4 text-muted">Las láminas 3M
                                                     ofrecen una amplia gama de opciones para mejorar el aspecto de sus
                                                     ventanas y agregar un toque de estilo y elegancia a su hogar o
                                                     negocio.</p>
@@ -299,15 +296,15 @@
                                 <ul class="card-text list-unstyled mt-4">
                                     <li class="mb-3 d-flex align-items-center">
                                         <i class="fas fa-paint-brush text-danger me-3 fa-lg"></i>
-                                        <span class="text-muted">Diseños personalizados</span>
-                                    </li>
-                                    <li class="mb-3 d-flex align-items-center">
-                                        <i class="fas fa-tint text-warning me-3 fa-lg"></i>
-                                        <span class="text-muted">Variedad de colores y texturas</span>
+                                        <span class="text-muted">Diseño moderno y elegante</span>
                                     </li>
                                     <li class="mb-3 d-flex align-items-center">
                                         <i class="fas fa-eye text-success me-3 fa-lg"></i>
-                                        <span class="text-muted">Mejora la apariencia visual</span>
+                                        <span class="text-muted">Mejora apariencia visual</span>
+                                    </li>
+                                    <li class="mb-3 d-flex align-items-center">
+                                        <i class="fas fa-tint text-warning me-3 fa-lg"></i>
+                                        <span class="text-muted">Ayuda a prolongar la vida útil de muebles y pisos</span>
                                     </li>
                                 </ul>
                             </div>
@@ -379,7 +376,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
-                    <img src="img/banner-footer.jpg" alt="Láminas 3M en acción" class="img-fluid rounded shadow">
+                    <img src="img/estilo.jpg" alt="Láminas 3M en acción" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
