--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </head>
 
 <body>
+
+    <div class="social-sidebar">
+        <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+        <!-- <a href="#" class="twitter"><i class="fab fa-twitter"></i></a> -->
+        <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/1234567890" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+
+        <!-- <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a> -->
+    </div>
+
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
@@ -304,7 +315,8 @@
                                     </li>
                                     <li class="mb-3 d-flex align-items-center">
                                         <i class="fas fa-tint text-warning me-3 fa-lg"></i>
-                                        <span class="text-muted">Ayuda a prolongar la vida útil de muebles y pisos</span>
+                                        <span class="text-muted">Ayuda a prolongar la vida útil de muebles y
+                                            pisos</span>
                                     </li>
                                 </ul>
                             </div>
@@ -404,7 +416,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-        <script src="js/clickderecho.js"></script>
+    <!-- <script src="js/clickderecho.js"></script> -->
 
 </body>
 
