--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
 
     <div class="social-sidebar">
-        <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+        <!-- <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a> -->
         <!-- <a href="#" class="twitter"><i class="fab fa-twitter"></i></a> -->
-        <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://wa.me/1234567890" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/3mfilmschile_yartech?igsh=cTA5bHhyZzc3YWI5&utm_source=qr" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=56997444505" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
         <!-- <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a> -->
     </div>
@@ -64,7 +64,7 @@
                             <span class="badge bg-warning mb-2">ESTILO</span>
                         </div>
                         <div class="mt-4 text-center">
-                            <a href="#" class="btn btn-primary btn-lg">Contáctanos</a>
+                            <a href="mailto:contacto@yartech.cl" class="btn btn-primary btn-lg">Contáctanos</a>
                         </div>
                         <div class="mt-5 d-flex justify-content-center align-items-center flex-column flex-md-row">
                             <img src="img/logo-yartech-lg.png" alt="YARTECH Logo" class="me-3 mb-3 mb-md-0"
@@ -416,7 +416,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <!-- <script src="js/clickderecho.js"></script> -->
+    <script src="js/clickderecho.js"></script>
 
 </body>
 
