--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="social-sidebar">
         <!-- <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a> -->
         <!-- <a href="#" class="twitter"><i class="fab fa-twitter"></i></a> -->
-        <a href="https://www.instagram.com/3mfilmschile_yartech?igsh=cTA5bHhyZzc3YWI5&utm_source=qr" class="instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://api.whatsapp.com/send?phone=56997444505" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <!-- <a href="https://www.instagram.com/3mfilmschile_yartech?igsh=cTA5bHhyZzc3YWI5&utm_source=qr" class="instagram"><i class="fab fa-instagram"></i></a> -->
+        <!-- <a href="https://api.whatsapp.com/send?phone=56997444505" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a> -->
 
         <!-- <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a> -->
     </div>
@@ -66,6 +66,20 @@
                         <div class="mt-4 text-center">
                             <a href="mailto:contacto@yartech.cl" class="btn btn-primary btn-lg">Contáctanos</a>
                         </div>
+                        <div class="mt-4 social-icons-container d-flex justify-content-center">
+                            <p class="text-white mb-2">Síguenos</p>
+                            <div class="social-icons">
+                                <!-- <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a> -->
+                                <a href="https://www.instagram.com/3mfilmschile_yartech?igsh=cTA5bHhyZzc3YWI5&utm_source=qr"
+                                    class="social-icon"><i class="fab fa-instagram"></i></a>
+                                <!-- <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a> -->
+                                <a href="https://api.whatsapp.com/send?phone=56997444505" class="social-icon"><i
+                                        class="fab fa-whatsapp"></i></a>
+                            </div>
+                        </div>
+
+
+
                         <div class="mt-5 d-flex justify-content-center align-items-center flex-column flex-md-row">
                             <img src="img/logo-yartech-lg.png" alt="YARTECH Logo" class="me-3 mb-3 mb-md-0"
                                 style="height: 50px;">
@@ -92,8 +106,10 @@
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas Control Solar</h3>
                                 <p class="card-text">Reduce el calor y protege contra los rayos UV</p>
-                                <a href="#" class="btn btn-primary">Más información</a>
+                                <a href="#" class="btn btn-success" data-bs-toggle="modal"
+                                    data-bs-target="#infoModal">Más información</a>
                             </div>
+
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -103,7 +119,8 @@
                             <div class="card-body text-center">
                                 <h3 class="card-title">Láminas de Seguridad</h3>
                                 <p class="card-text">Protección contra roturas y entrada forzada</p>
-                                <a href="#" class="btn btn-success">Más información</a>
+                                <a href="#" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#securityModal">Más información</a>
                             </div>
                         </div>
                     </div>
@@ -416,8 +433,103 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <script src="js/clickderecho.js"></script>
+    <!-- <script src="js/clickderecho.js"></script> -->
 
 </body>
+
+
+<!-- MODAL LAMINAS CONTROL SOLAR -->
+<div class="modal fade" id="infoModal" tabindex="1" aria-labelledby="infoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="infoModalLabel">Información Adicional</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <!-- <div class="col-md-6 mb-3">
+                        <a href="path/to/laminas-control-solar.pdf"
+                            class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Láminas Control
+                                Solar</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div> -->
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/lowe.pdf"
+                            class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> LowE</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/prestige-interior.pdf"
+                            class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Prestige
+                                Interior</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/prestige-exterior.pdf"
+                            class="btn btn-outline-warning btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Prestige
+                                Exterior</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL SEGURIDAD -->
+
+<!-- Modal -->
+<div class="modal fade" id="securityModal" tabindex="-1" aria-labelledby="securityModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="securityModalLabel">Láminas de Seguridad</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/safety-s40.pdf"
+                            class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Safety S40</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/ultra800.pdf"
+                            class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Ultra800</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="pdf\Safety Exterior.pdf"
+                            class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Safety Exterior</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 </html>
