--- a/index.html
+++ b/index.html
@@ -67,14 +67,13 @@
                             <a href="mailto:contacto@yartech.cl" class="btn btn-primary btn-lg">Contáctanos</a>
                         </div>
                         <div class="mt-4 social-icons-container d-flex justify-content-center">
-                            <p class="text-white mb-2">Síguenos</p>
+                            <!-- <p class="text-white mb-2">Síguenos</p> -->
                             <div class="social-icons">
-                                <!-- <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a> -->
                                 <a href="https://www.instagram.com/3mfilmschile_yartech?igsh=cTA5bHhyZzc3YWI5&utm_source=qr"
-                                    class="social-icon"><i class="fab fa-instagram"></i></a>
-                                <!-- <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a> -->
-                                <a href="https://api.whatsapp.com/send?phone=56997444505" class="social-icon"><i
-                                        class="fab fa-whatsapp"></i></a>
+                                class="social-icon instagram-icon mx-3"><i class="fab fa-instagram"></i></a>
+                             <a href="https://api.whatsapp.com/send?phone=56997444505" 
+                                class="social-icon whatsapp-icon mx-3"><i class="fab fa-whatsapp"></i></a>
+                             
                             </div>
                         </div>
 
