--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <!-- <p class="text-white mb-2">Síguenos</p> -->
                             <div class="social-icons">
                                 <a href="https://www.instagram.com/3mfilmschile_yartech?igsh=cTA5bHhyZzc3YWI5&utm_source=qr"
-                                class="social-icon instagram-icon mx-3"><i class="fab fa-instagram"></i></a>
-                             <a href="https://api.whatsapp.com/send?phone=56997444505" 
-                                class="social-icon whatsapp-icon mx-3"><i class="fab fa-whatsapp"></i></a>
-                             
+                                    class="social-icon instagram-icon mx-3"><i class="fab fa-instagram"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=56997444505"
+                                    class="social-icon whatsapp-icon mx-3"><i class="fab fa-whatsapp"></i></a>
+
                             </div>
                         </div>
 
@@ -509,16 +509,30 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/ultra800.pdf"
-                            class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
-                            <span> Ultra800</span>
+                        <a href="pdf\Safety Exterior.pdf"
+                            class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Safety S40 Exterior</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/safety-s40.pdf"
+                            class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Safety S70</span>
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
                         <a href="pdf\Safety Exterior.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
-                            <span> Safety Exterior</span>
+                            <span> Safety S70 Exterior</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="path/to/ultra800.pdf"
+                            class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Ultra800</span>
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
