--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <div class="modal-body">
                 <div class="row">
                     <!-- <div class="col-md-6 mb-3">
-                        <a href="path/to/laminas-control-solar.pdf"
+                        <a href="pdf/laminas-control-solar.pdf"
                             class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Láminas Control
                                 Solar</span>
@@ -457,14 +457,14 @@
                         </a>
                     </div> -->
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/lowe.pdf"
+                        <a href="pdf/lowe.pdf"
                             class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> LowE</span>
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/prestige-interior.pdf"
+                        <a href="pdf/prestige-interior.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Prestige
                                 Interior</span>
@@ -472,7 +472,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/prestige-exterior.pdf"
+                        <a href="pdf/prestige-exterior.pdf"
                             class="btn btn-outline-warning btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Prestige
                                 Exterior</span>
@@ -502,7 +502,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/safety-s40.pdf"
+                        <a href="pdf/safety-s40.pdf"
                             class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S40</span>
                             <i class="fas fa-file-pdf"></i>
@@ -516,7 +516,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/safety-s40.pdf"
+                        <a href="pdf/safety-s40.pdf"
                             class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S70</span>
                             <i class="fas fa-file-pdf"></i>
@@ -530,7 +530,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="path/to/ultra800.pdf"
+                        <a href="pdf/ultra800.pdf"
                             class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Ultra800</span>
                             <i class="fas fa-file-pdf"></i>
