--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf\Safety Exterior.pdf"
+                        <a href="pdf\prestige-int.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S40 Exterior</span>
                             <i class="fas fa-file-pdf"></i>
@@ -523,14 +523,14 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf\Safety Exterior.pdf"
+                        <a href="pdf\safety-ext.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S70 Exterior</span>
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf/ultra800.pdf"
+                        <a href="pdf/ultra.pdf"
                             class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Ultra800</span>
                             <i class="fas fa-file-pdf"></i>
