--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <a href="pdf/safety-s40.pdf"
+                        <a href="pdf/safety-int.pdf"
                             class="btn btn-outline-primary btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S40</span>
                             <i class="fas fa-file-pdf"></i>
