--- a/index.html
+++ b/index.html
@@ -457,14 +457,14 @@
                         </a>
                     </div> -->
                     <div class="col-md-6 mb-3">
-                        <a href="pdf/lowe.pdf"
+                        <a href="pdf/lowE.pdf"
                             class="btn btn-outline-success btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> LowE</span>
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf/prestige-interior.pdf"
+                        <a href="pdf/prestige-int.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Prestige
                                 Interior</span>
@@ -472,10 +472,24 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf/prestige-exterior.pdf"
+                        <a href="pdf/prestige-ext.pdf"
                             class="btn btn-outline-warning btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Prestige
                                 Exterior</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="pdf/silver-p18.pdf"
+                            class="btn btn-outline-secondary btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Silver P18</span>
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="pdf/silver-15-ext.pdf"
+                            class="btn btn-outline-dark btn-lg w-100 d-flex align-items-center justify-content-between">
+                            <span> Silver 15 Exterior</span>
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
@@ -487,6 +501,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- MODAL SEGURIDAD -->
 
@@ -509,7 +524,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf\prestige-int.pdf"
+                        <a href="pdf/safety-ext.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S40 Exterior</span>
                             <i class="fas fa-file-pdf"></i>
@@ -523,7 +538,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="pdf\safety-ext.pdf"
+                        <a href="pdf/safety-ext.pdf"
                             class="btn btn-outline-info btn-lg w-100 d-flex align-items-center justify-content-between">
                             <span> Safety S70 Exterior</span>
                             <i class="fas fa-file-pdf"></i>
